--- a/about.html
+++ b/about.html
@@ -9,7 +9,7 @@
 <body>
     <div class="container">
         <div class="header">
-            <img src="/b03_rs.png">
+            <img src="/imgs/b03_rs.png">
             <div class="nav">
                 <a href="index.html">Main</a>
                 <a href="about.html">About</a>
@@ -17,9 +17,23 @@
             </div>
         </div>
         <div class="page-header">
-            <p>Welcome to the official website of Joey vs. The World!</p>
-        </div>
-        <p>HELP</p>
+            <h2>What is Joey vs. The World?</h2>
+        </div> 
+        <center>
+            <p>Joey vs. The World is a new 2026 platformer, score attack, action game inspired by games like <b>Rayman Origins</b>, <b>Sonic the Hedgehog</b>, and many of the arcade classics, obviously still under active development. Why else weren't you able to purchase it?</p>
+            <p>The game is being lead by <b>Gorilla Junction Team</b>, a team of people who just like to make whatever for whoever.</p>
+            <h1>VISUALSHOCK!</h1>
+            <p>Join Joey on an epic adventure to save his planet from the clutches of the evil dictator from space, Lord Saturn! (no affiliation with Shanaishchara whatsoever) We ourselves aren't even sure if Joey was fit for the job!</p>
+            <p>Dash, Crash and Pummel to make your way to the unique end boss of each of the 15 stages!</p>
+            <img src="imgs/dive-bomb-00-00-26-12-still001-1678983475204.jpg" width="466" height="262">
+            <h1>SPEEDSHOCK!</h1>
+            <p>We here at <b>Gorilla Junction Team</b> don't mind slow people. But Joey certainly does...</p>
+            <p>So get movin'! Go for time trials, beat the developer times, and put your speed and reaction skills to the absolute test!</p>
+            <img src="imgs/pirate-level-with-rockets-00-02-17-28-still001-1678983475205.jpg" width="466" height="262">
+            <h1>SOUNDSHOCK!</h1>
+            <p>blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah </p>
+            <img src="imgs/ghost-level-and-secret-00-02-30-29-still001-1678983475203.jpg" width="466" height="262">
+        </center>
     </div>
 </body>
 </html>
