--- a/downloads.html
+++ b/downloads.html
@@ -1,15 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Grid Background Page</title>
     <link href="/style.css" rel="stylesheet" type="text/css" media="all">
 </head>
+
 <body>
     <div class="container">
         <div class="header">
-            <img src="/b03_rs.png">
+            <img src="/imgs/b03_rs.png">
             <div class="nav">
                 <a href="index.html">Main</a>
                 <a href="about.html">About</a>
@@ -20,13 +22,26 @@
             <h2>Downloads</h2>
             <p>ya won't regret it!</p>
         </div>
-        <p>steam</p>
-        <iframe src="https://store.steampowered.com/widget/71116/" frameborder="0" width="646" height="190"></iframe>
         <p>itch.io</p>
         <iframe frameborder="0" src="https://itch.io/embed/2986374?dark=true" width="552" height="167"><a href="https://zyndrolith.itch.io/joey-vs-the-world">Joey Vs. The World by gibsfx</a></iframe>
+        <p>Gamejolt</p>
+        <iframe src="https://widgets.gamejolt.com/package/v1?key=8SQNbQV4" frameborder="0" width="500" height="245"></iframe>
         <br>
-        <p>did we mention this game is open source?</p>
-        <a href="http://youtube.com">github source code</a>
+        <h2>Did we mention this game is open source?</h2>
+        <a href="http://youtube.com">
+            <img src="/imgs/octicons-mark-github.svg.png" alt="GitHub Logo" width="35" height="35" style="vertical-align: middle; margin-left: 5px;">
+            github source code
+        </a>
+        <center><h3>Also coming soon to Sega Genesis and Mega Drive systems! (US and JP Regions only)</h3></center>
+        <div style="display: flex; align-items: center;">
+            <img src="/imgs/thegamesever.png" width="580" height="455" alt="The Game's Ever" style="margin-top: 10px;">
+            <div style="display: flex; flex-direction: column; margin-right: 15px; align-self: center;">
+                <img src="/imgs/img_alien_soldier_01.jpg" width="200" height="150" alt="Alien Soldier 01" style="margin-bottom: 10px;">
+                <img src="/imgs/img_alien_soldier_02.jpg" width="200" height="150" alt="Alien Soldier 02">
+            </div>
+        </div>
+        <img src="/imgs/Logo_homebrew_factory_white_outline.png" width="661" height="126">
+        <a href="http://homebrew-factory.com"><p>fund our compaing on homebrew factory!</p></a>
     </div>
 </body>
 </html>
