--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Grid Background Page</title>
+    <title>Main</title>
     <link rel="stylesheet" type="text/css" href="https://gorillajunctionteam.github.io/joeyvstheworld/style.css">
 </head>
 <body>
