--- a/about.html
+++ b/about.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Grid Background Page</title>
-    <link href="/style.css" rel="stylesheet" type="text/css" media="all">
+    <title>About</title>
+    <link rel="stylesheet" type="text/css" href="https://gorillajunctionteam.github.io/joeyvstheworld/style.css">
 </head>
 <body>
     <div class="container">
